syntax = "proto3";

package PB_Desktop;
option java_package = "com.flipperdevices.protobuf.desktop";

message IsLockedRequest {
}

message UnlockRequest {
}

message StatusSubscribeRequest {
}

message StatusUnsubscribeRequest {
}

message Status {
    bool locked = 1;
}
